--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
       - run: |
-          nix run github:${{ github.action_repository }}/{{ github.action_ref }}
+          nix run github:${{ github.action_repository }}/${{ github.action_ref }}
