--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
       - run: |
-          nix run github:$ACTION_REPO/$ACTION_REF
+          nix run github:${{ env.ACTION_REPO }}/${{ env.ACTION_REF }}
         env:
           ACTION_REF: ${{ github.action_ref }}
           ACTION_REPO: ${{ github.action_repository }}
