--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,13 @@ jobs:
         os:
           - ubuntu-latest
     runs-on: ${{ matrix.os }}
-    env:
-      ACTION_REF: ${{ github.action_ref }}
-      ACTION_REPO: ${{ github.action_repository }}
     steps:
-      - uses: actions/checkout@v4
+      - run: |
+          echo "ACTION_REPO=${{ env.ACTION_REPO }}" >> "$GITHUB_ENV"
+          echo "ACTION_REF=${{ env.ACTION_REF }}" >> "$GITHUB_ENV"
+        env:
+          ACTION_REPO: ${{ github.action_repository }}
+          ACTION_REF: ${{ github.action_ref }}
       - uses: DeterminateSystems/nix-installer-action@main
       - run: |
-          nix run github:${{ env.ACTION_REPO }}/${{ env.ACTION_REF }}
+          nix run github:$ACTION_REPO/$ACTION_REF
