--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,6 @@ jobs:
           - ubuntu-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - run: |
-          echo "ACTION_REPO=${{ env.ACTION_REPO }}" >> "$GITHUB_ENV"
-          echo "ACTION_REF=${{ env.ACTION_REF }}" >> "$GITHUB_ENV"
-        env:
-          ACTION_REPO: ${{ github.action_repository }}
-          ACTION_REF: ${{ github.action_ref }}
       - uses: DeterminateSystems/nix-installer-action@main
       - run: |
-          nix run github:$ACTION_REPO/$ACTION_REF
+          nix run github:physics-enthusiast/nix-ad1-tools/test
